--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
 </head>
 <body>
+  <h1>HTML5 Canvas Player</h1>
   <div>
     <canvas id="idCanvas"></canvas>
   </div>
