--- a/index.html
+++ b/index.html
@@ -6,6 +6,12 @@
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
 
   <script type="text/javascript" src="./liteH5Player-unit-test.debug.js"></script>
+
+  <style>
+    #idCanvas {
+      background-color: black;
+    }
+  </style>
 </head>
 <body>
   <div>
